recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.2)
 required: Int
    spiral(1000,25,1,.2);
                     ^