recursion.lessons.recursion.spiral.SpiralUse.scala.code
override def run() {
    spiral(1000,25,1,.2);
}
